--- a/templates/crm/summary.html
+++ b/templates/crm/summary.html
@@ -19,6 +19,16 @@
   <h1 style="padding-left: 15Px">Customer Summary for {{ customer.cust_name }}</h1>
 
 </div>
+        <table class="table table-striped table-bordered table-hover">
+        <thead>
+            <tr class="bg-info">
+                <th>Total of Service Charges and Product charges
+                    ${{ sum_service_charge.service_charge__sum|floatformat:2 }} +
+                    ${{ sum_product_charge.charge__sum|floatformat:2 }}</th>
+            </tr>
+        </thead>
+
+</div>
     <div class="row">
         <h2 style="padding-left: 15Px">Services Information</h2>
     </div>
